
0.5.0
=====

* FEATURE: Add ehcache library for caching of parsed topics and images.
* FEATURE: Add experimental support for LDAP.
* FEATURE: Consolidate configuration values into jamwiki-configuration.xml.
* FEATURE: Add option to use WYSIWYG edit buttons (axelclk).
* FEATURE: Add Special:Imagelist page to display a list of all images.
* FEATURE: Add Special:Filelist page to display a list of all non-image files.
* FEATURE: Experimental Special:Import XML import (gutsul).
* BUG: Fixes for MS SQL issues (scroco).
* BUG: "Login already exists" error when trying to update user account fixed.
* BUG: Fix upload error with IE that could cause file upload to incorrectly
  set the file name.
* FEATURE: Add support for the __FORCETOC__ tag.
* BUG: The __TOC__ should force a table of contents to appear, even with fewer
  than four headings.
* BUG: Do not allow users without proper permissions to move read-only or
  admin-only topics.
* BUG: Properly log messages from Utilities and with configured log levels.
* FEATURE: Handle category names case-insensitive, thus "Category:Test" and
  "Category:test" are treated as the same category.
* FEATURE: Display current date & time on Special:RecentChanges page.
* FEATURE: Upgrade to Spring Framework 2.0.1.
* FEATURE: Remove (now unused) convert-to-file option from Special:Convert.
* FEATURE: Include the Bliki parser as an alternative to the default parser
  (axelclk).
* FEATURE: Add access keys for edit page fields (axelclk).
* FEATURE: Add a check to verify a supported JDK version during setup.
* FEATURE: Updated Chinese translations (hfl).
* FEATURE: Updated Polish translations (dlpa).
* FEATURE: Updated German translations (axelclk).

0.4.3
=====

* FEATURE: Add support for Mediawiki <ref> tag as described on
  http://meta.wikimedia.org/wiki/Help:Footnotes.
* FEATURE: Add "Watch Topic" checkbox when editing.
* FEATURE: Add "Special:Specialpages" page.
* BUG: Do not HTML escape &lt; and &gt;.