@@ -29,10 +29,10 @@ import org.jamwiki.utils.WikiLogger;
  */
 public class WikiUser implements UserDetails {
 
-    private static final long serialVersionUID = 8081925283274124743L;
+	private static final long serialVersionUID = 8081925283274124743L;
 
-    private final GrantedAuthority ROLE_USER = new GrantedAuthorityImpl("ROLE_USER");
-    private final GrantedAuthority ROLE_ADMIN = new GrantedAuthorityImpl("ROLE_ADMIN");
+	private final GrantedAuthority ROLE_USER = new GrantedAuthorityImpl("ROLE_USER");
+	private final GrantedAuthority ROLE_ADMIN = new GrantedAuthorityImpl("ROLE_ADMIN");
 
 	private Timestamp createDate = new Timestamp(System.currentTimeMillis());
 	private String createIpAddress = null;
@@ -42,17 +42,17 @@ public class WikiUser implements UserDetails {
 	private String username = null;
 	private int userId = -1;
 
-    // FIXME - consider making this an ACL (more flexible)
-    // GrantedAuthority is used by Acegi Security to support several authorities (roles).
-    // For backward compatibility admin is a wrapper for grantedAuthorities.
-    //private boolean admin = false;
-    /**
-     * A logged user always has ROLE_USER and may have ROLE_ADMIN.
-     */
-    private GrantedAuthority[] grantedAuthorities;
-    private String password = null;
+	// FIXME - consider making this an ACL (more flexible)
+	// GrantedAuthority is used by Acegi Security to support several authorities (roles).
+	// For backward compatibility admin is a wrapper for grantedAuthorities.
+	//private boolean admin = false;
+	/**
+	 * A logged user always has ROLE_USER and may have ROLE_ADMIN.
+	 */
+	private GrantedAuthority[] grantedAuthorities;
+	private String password = null;
 
-    private static WikiLogger logger = WikiLogger.getLogger(WikiUser.class.getName());
+	private static WikiLogger logger = WikiLogger.getLogger(WikiUser.class.getName());
 
 	/**
 	 *
@@ -64,20 +64,20 @@ public class WikiUser implements UserDetails {
 	 *
 	 */
 	public boolean getAdmin() {
-        return (grantedAuthorities != null) && (Arrays.asList(grantedAuthorities).contains(ROLE_ADMIN));
+		return (grantedAuthorities != null) && (Arrays.asList(grantedAuthorities).contains(ROLE_ADMIN));
 	}
 
 	/**
 	 *
 	 */
 	public void setAdmin(boolean admin) {
-        // A user's roles are fixed so far, so it's safe to create or destroy grantedAuthorities as required.
-        // If more roles are to be supported this method must be refactored.
-        if (admin) {
-            grantedAuthorities = new GrantedAuthority[] {ROLE_USER, ROLE_ADMIN};
-        } else {
-            grantedAuthorities = new GrantedAuthority[] {ROLE_USER};
-        }
+		// A user's roles are fixed so far, so it's safe to create or destroy grantedAuthorities as required.
+		// If more roles are to be supported this method must be refactored.
+		if (admin) {
+			grantedAuthorities = new GrantedAuthority[] {ROLE_USER, ROLE_ADMIN};
+		} else {
+			grantedAuthorities = new GrantedAuthority[] {ROLE_USER};
+		}
 	}
 
 	/**
@@ -154,14 +154,14 @@ public class WikiUser implements UserDetails {
 	 * @deprecated use getUsername() instead.
 	 */
 	public String getLogin() {
-        return getUsername();
+		return getUsername();
 	}
 
 	/**
 	 * @deprecated use setUsername(login) instead
 	 */
 	public void setLogin(String login) {
-        setUsername(login);
+		setUsername(login);
 	}
 
 	/**
@@ -175,7 +175,7 @@ public class WikiUser implements UserDetails {
 	 * @deprecated use setPassword(rememberKey) instead.
 	 */
 	public void setRememberKey(String rememberKey) {
-        setPassword(rememberKey);
+		setPassword(rememberKey);
 	}
 
 	/**
@@ -192,45 +192,72 @@ public class WikiUser implements UserDetails {
 		this.userId = userId;
 	}
 
-    // Acegi Security: UserDetails contract
+	// Acegi Security: UserDetails contract
 
-    public GrantedAuthority[] getAuthorities() {
-        return grantedAuthorities;
-    }
+	/**
+	 *
+	 */
+	public GrantedAuthority[] getAuthorities() {
+		return grantedAuthorities;
+	}
 
-    public String getPassword() {
-        return password;
-    }
+	/**
+	 *
+	 */
+	public String getPassword() {
+		return password;
+	}
 
-    public void setPassword(String password) {
-        this.password = password;
-    }
+	/**
+	 *
+	 */
+	public void setPassword(String password) {
+		this.password = password;
+	}
 
-    public String getUsername() {
-        return username;
-    }
+	/**
+	 *
+	 */
+	public String getUsername() {
+		return username;
+	}
 
-    public void setUsername(String username) {
-        this.username = username;
-    }
+	/**
+	 *
+	 */
+	public void setUsername(String username) {
+		this.username = username;
+	}
 
-    public boolean isAccountNonExpired() {
-        // TODO Not yet implemented
-        return true;
-    }
+	/**
+	 *
+	 */
+	public boolean isAccountNonExpired() {
+		// TODO Not yet implemented
+		return true;
+	}
 
-    public boolean isAccountNonLocked() {
-        // TODO Not yet implemented
-        return true;
-    }
+	/**
+	 *
+	 */
+	public boolean isAccountNonLocked() {
+		// TODO Not yet implemented
+		return true;
+	}
 
-    public boolean isCredentialsNonExpired() {
-        // TODO Not yet implemented
-        return true;
-    }
+	/**
+	 *
+	 */
+	public boolean isCredentialsNonExpired() {
+		// TODO Not yet implemented
+		return true;
+	}
 
-    public boolean isEnabled() {
-        // TODO Not yet implemented
-        return true;
-    }
+	/**
+	 *
+	 */
+	public boolean isEnabled() {
+		// TODO Not yet implemented
+		return true;
+	}
 }
